Fixed slideshow issue where you would click next it skipped to the next user in the array.... it was a simple z-index ahh

--- a/client/src/app/profile-preview/profile-preview.component.sass
+++ b/client/src/app/profile-preview/profile-preview.component.sass
@@ -9,7 +9,7 @@
 .profile-image
     height: 260px
     width: 100%
-    overflow-x: scroll
+    // overflow-x: scroll
     img
         width: 100%
         height: 250px
