--- a/client/src/app/profile/profile.component.sass
+++ b/client/src/app/profile/profile.component.sass
@@ -305,11 +305,9 @@
     top: 0px
 .settings
     height: 30px;
-    margin: 6px 0px 0px 350px
     cursor: pointer
-    @media screen and (max-width: 760px)
-        float: left
-        margin: 6px 0px 0px 5px
+    float: left
+    margin: 6px 0px 0px 5px
 
 .settings-container
     position: absolute
