--- a/client/src/app/users/users.component.sass
+++ b/client/src/app/users/users.component.sass
@@ -17,6 +17,7 @@
     top: 20px
     bottom: 0
     left: 0
+    z-index: 1
     border-radius: 50px
     box-shadow: 0px 0px 15px 0px #888888
     overflow: scroll
